src/test/contracts/negative/interpreter_tests/bad_balances_reset.mligo
module Test = Test.Next

let test = Test.State.reset 2n [4000tez;4000tez]
